# the_opponent_framework

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.claude/: skills
backend/: .env.example  Dockerfile  README.md  mini_main.py  pyproject.toml
backend/src/opponent/: __init__.py  main.py
backend/src/opponent/agents/: __init__.py  misc.py  noma_note_creator.py  note_linker.py  opponent_agent.py
backend/src/opponent/api/: __init__.py  links.py  notes.py  opponent.py  vault.py
backend/src/opponent/config/: __init__.py  settings.py
backend/src/opponent/misc/: __init__.py  markdown_tools.py
backend/src/opponent/prompts/: __init__.py  noma_prompts.py  opponent_prompts.py
backend/src/opponent/rag/: __init__.py  retrieval.py  vectorstore.py
backend/src/opponent/structs/: __init__.py  note.py
backend/tests/: output_api.txt  test_api.py  test_logic.py  test_vault.py
backend/tests/test_vault/: ai's_transformational_impact_on_employment:_a_historical_perspective.md  ai_job_displacement_concerns.md  benefits_of_remote_work.md  future_of_work.md  sample_existing_note.md
