[project]
name = "opponent"
version = "0.1.0"
description = "AI-powered adversarial argument system with note creation and linking"
authors = [
    { name = "cbr4l0k", email = "your.email@example.com" }
]
readme = "./README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Core LLM framework
    "langgraph>=0.0.40",
    # Vector store and embeddings
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2.2",
    # Ollama integration
    "langchain-ollama>=0.0.1",
    # FastAPI and web
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    # Settings and configuration
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # File handling and markdown
    "python-frontmatter>=1.1.0",
]

[project.optional-dependencies]
dev = [
    # Linting and formatting
    "ruff>=0.1.9",
    "black>=23.12.0",
    "mypy>=1.8.0",
]

[project.scripts]
opponent = "opponent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opponent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=opponent",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
